[gd_scene load_steps=29 format=3 uid="uid://bgn4yk2job4n3"]

[ext_resource type="Script" path="res://Lvl2/fox/fox.gd" id="1_yh4na"]
[ext_resource type="PackedScene" uid="uid://bs5wcqafcca4v" path="res://Lvl2/fox/spike/spike_left.tscn" id="2_7tmxf"]
[ext_resource type="PackedScene" uid="uid://b3c8mcy6n8qnf" path="res://Lvl2/fox/spike/spike_right.tscn" id="3_onlnn"]
[ext_resource type="Texture2D" uid="uid://cvmi1t5n711r0" path="res://Lvl2/fox/Assets/Fox (3).png" id="4_dda3h"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5jk8g"]
radius = 28.0
height = 142.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sa0oo"]
radius = 427.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vo6h2"]
radius = 36.0001
height = 572.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8xsxn"]
size = Vector2(150, 47)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5lak"]
atlas = ExtResource("4_dda3h")
region = Rect2(0, 234, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_v82lx"]
atlas = ExtResource("4_dda3h")
region = Rect2(196, 234, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcrql"]
atlas = ExtResource("4_dda3h")
region = Rect2(392, 234, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lkgr"]
atlas = ExtResource("4_dda3h")
region = Rect2(784, 117, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_asr2p"]
atlas = ExtResource("4_dda3h")
region = Rect2(0, 351, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwwy3"]
atlas = ExtResource("4_dda3h")
region = Rect2(196, 351, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nv5o"]
atlas = ExtResource("4_dda3h")
region = Rect2(392, 351, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8dym"]
atlas = ExtResource("4_dda3h")
region = Rect2(588, 351, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_gabv0"]
atlas = ExtResource("4_dda3h")
region = Rect2(0, 0, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_a3m4i"]
atlas = ExtResource("4_dda3h")
region = Rect2(196, 0, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nuit"]
atlas = ExtResource("4_dda3h")
region = Rect2(392, 0, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_ianpk"]
atlas = ExtResource("4_dda3h")
region = Rect2(588, 0, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_pmtp3"]
atlas = ExtResource("4_dda3h")
region = Rect2(784, 0, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5vud"]
atlas = ExtResource("4_dda3h")
region = Rect2(0, 117, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixq1f"]
atlas = ExtResource("4_dda3h")
region = Rect2(196, 117, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_im185"]
atlas = ExtResource("4_dda3h")
region = Rect2(392, 117, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv5lx"]
atlas = ExtResource("4_dda3h")
region = Rect2(588, 117, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_okvac"]
atlas = ExtResource("4_dda3h")
region = Rect2(588, 234, 196, 117)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkkld"]
atlas = ExtResource("4_dda3h")
region = Rect2(784, 234, 196, 117)

[sub_resource type="SpriteFrames" id="SpriteFrames_a2ybe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5lak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v82lx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcrql")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lkgr")
}],
"loop": true,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_asr2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwwy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nv5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8dym")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gabv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a3m4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nuit")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ianpk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pmtp3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5vud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixq1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_im185")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv5lx")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_okvac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkkld")
}],
"loop": true,
"name": &"sit",
"speed": 3.0
}]

[node name="foxBody" type="CharacterBody2D"]
script = ExtResource("1_yh4na")
spike_left = ExtResource("2_7tmxf")
spike_right = ExtResource("3_onlnn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 8)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_5jk8g")

[node name="detector" type="Area2D" parent="."]

[node name="agro" type="CollisionShape2D" parent="detector"]
shape = SubResource("CircleShape2D_sa0oo")

[node name="hit_distance" type="Area2D" parent="."]

[node name="hit_distance" type="CollisionShape2D" parent="hit_distance"]
rotation = -1.57079
shape = SubResource("CapsuleShape2D_vo6h2")

[node name="blocks_collision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="blocks_collision"]
position = Vector2(-3, 1.5)
shape = SubResource("RectangleShape2D_8xsxn")

[node name="Node" type="Node" parent="."]

[node name="Marker2DL" type="Marker2D" parent="Node"]
position = Vector2(-213, 4)

[node name="Marker2DR" type="Marker2D" parent="Node"]
position = Vector2(211, 4)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_a2ybe")
animation = &"sit"
frame_progress = 0.31655

[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
[connection signal="body_entered" from="hit_distance" to="." method="_on_hit_distance_body_entered"]
[connection signal="body_exited" from="hit_distance" to="." method="_on_hit_distance_body_exited"]
[connection signal="body_entered" from="blocks_collision" to="." method="_on_blocks_collision_body_entered"]
